UI: Fix incorrect overflows on panels

--- a/hawk/app/assets/stylesheets/application/_content.scss
+++ b/hawk/app/assets/stylesheets/application/_content.scss
@@ -99,14 +99,6 @@
   }
 }
 
-.panel-collapse {
-    overflow: auto;
-}
-
-.panel-body {
-    overflow: auto;
-}
-
 #rightbar {
   background-color: $rightbar-bg;
 
